--- a/03-js-tools/package.json
+++ b/03-js-tools/package.json
@@ -23,5 +23,9 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Edge versions"
+  ]
 }
