--- a/04-core-react/.eslintrc.json
+++ b/04-core-react/.eslintrc.json
@@ -1,6 +1,16 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors", // settings for plugins
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "react/prop-types": 0, // won't use in this project
+    "react/react-in-jsx-scope": 0 // babel implements the newer version so no need
+  },
+  "plugins": ["react", "import", "jsx-a11y"], // use installed plugins
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
@@ -10,5 +20,10 @@
     "es6": true,
     "browser": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect" // detect version based in package.json | important to set since diff versions have diff functionality
+    }
   }
 }
