--- a/04-core-react/.eslintrc.json
+++ b/04-core-react/.eslintrc.json
@@ -4,6 +4,7 @@
     "plugin:import/errors", // settings for plugins
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
     "prettier"
   ],
   "rules": {
